--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,14 @@
     border: 0;
     border-top: 5px solid #f8f9fa;
 }
- 
+ .container-fluid{
+   margin-left:0px;
+   margin-right: 0px;
+ }
   </style>
 </head>
 <body style="background:orange;">
-  <div style="container-fluid">
+  <div class="container-fluid">
     <div class="row" style="background:#f7f7f7 !important;">
         <div class="col-md-3">
           <img src="assets/logo.jpg" style="width: 100%; height:100%;">
